[gd_scene load_steps=8 format=4 uid="uid://cq5ej7a575pts"]

[ext_resource type="Script" path="res://snake.gd" id="1_cki1h"]
[ext_resource type="TileSet" uid="uid://0rwjsil1qg8" path="res://forest tile set.tres" id="1_vdndo"]
[ext_resource type="TileSet" uid="uid://crqhlpll8do0v" path="res://tiles/dungeon_items.tres" id="2_ioxok"]
[ext_resource type="TileSet" uid="uid://wwganuq5s84f" path="res://tiles/grid highlight/grid_highlights.tres" id="3_qh4lb"]
[ext_resource type="PackedScene" uid="uid://d2g8c8vd4on3r" path="res://sprites/walky_guy.tscn" id="4_m1wmf"]
[ext_resource type="PackedScene" uid="uid://bo2yy1bib2wck" path="res://sprites/flaming skull/skull.tscn" id="5_3nbu2"]
[ext_resource type="PackedScene" uid="uid://bq4rnmqxp5eim" path="res://default_pause_menu.tscn" id="6_04wxa"]

[node name="Root" type="Node2D"]
script = ExtResource("1_cki1h")

[node name="Game" type="Node2D" parent="."]

[node name="Background" type="Node2D" parent="Game"]

[node name="Arena" type="TileMapLayer" parent="Game/Background"]
tile_map_data = PackedByteArray("AAAAAAAAAAABAAUAAAAAAAEAAAABAAYAAAABAAAAAAACAAUAAAABAAEAAAAEAAMAAAAAAAIAAAABAAUAAAAAAAMAAAABAAYAAAABAAIAAAADAAYAAAABAAMAAAADAAUAAAAAAAQAAAABAAUAAAAAAAUAAAABAAYAAAABAAQAAAADAAYAAAABAAUAAAADAAUAAAAAAAYAAAABAAUAAAAAAAcAAAABAAYAAAABAAYAAAADAAYAAAABAAcAAAADAAUAAAAAAAgAAAABAAUAAAAAAAkAAAABAAYAAAABAAgAAAADAAYAAAABAAkAAAADAAUAAAAAAAoAAAABAAUAAAAAAAsAAAABAAYAAAABAAoAAAADAAYAAAABAAsAAAADAAUAAAAAAAwAAAABAAUAAAAAAA0AAAABAAYAAAABAAwAAAADAAYAAAABAA0AAAAEAAQAAAAAAA4AAAABAAUAAAABAA4AAAACAAUAAAACAAAAAAABAAUAAAACAAEAAAABAAcAAAADAAAAAAACAAUAAAADAAEAAAACAAcAAAACAAIAAAAAAAAAAAACAAMAAAAAAAEAAAADAAIAAAABAAAAAAACAAUAAAAAAAEAAAACAAYAAAAAAAIAAAACAAcAAAAAAAEAAAACAAgAAAAAAAIAAAACAAkAAAAAAAEAAAACAAoAAAAAAAEAAAACAAsAAAAAAAIAAAACAAwAAAAAAAMAAAACAA0AAAABAAQAAAADAAwAAAABAAMAAAADAA0AAAACAAQAAAACAA4AAAABAAUAAAADAA4AAAACAAUAAAAEAAAAAAABAAUAAAAEAAEAAAABAAcAAAAFAAAAAAACAAUAAAAFAAEAAAACAAcAAAAEAAIAAAACAAAAAAAFAAIAAAABAAAAAAAEAAwAAAACAAMAAAAEAA0AAAABAAQAAAAFAAwAAAABAAMAAAAFAA0AAAACAAQAAAAEAA4AAAABAAUAAAAFAA4AAAACAAUAAAAGAAAAAAABAAUAAAAGAAEAAAABAAcAAAAHAAAAAAACAAUAAAAHAAEAAAACAAcAAAAGAAIAAAACAAAAAAAHAAIAAAABAAAAAAAGAAwAAAACAAMAAAAGAA0AAAABAAQAAAAHAAwAAAABAAMAAAAHAA0AAAACAAQAAAAGAA4AAAABAAUAAAAHAA4AAAACAAUAAAAIAAAAAAABAAUAAAAIAAEAAAABAAcAAAAJAAAAAAACAAUAAAAJAAEAAAACAAcAAAAIAAIAAAACAAAAAAAJAAIAAAABAAAAAAAIAAwAAAACAAMAAAAIAA0AAAABAAQAAAAJAAwAAAABAAMAAAAJAA0AAAACAAQAAAAIAA4AAAABAAUAAAAJAA4AAAACAAUAAAAKAAAAAAABAAUAAAAKAAEAAAABAAcAAAALAAAAAAACAAUAAAALAAEAAAACAAcAAAAKAAIAAAACAAAAAAALAAIAAAABAAAAAAAKAAwAAAACAAMAAAAKAA0AAAABAAQAAAALAAwAAAABAAMAAAALAA0AAAACAAQAAAAKAA4AAAABAAUAAAALAA4AAAACAAUAAAAMAAAAAAABAAUAAAAMAAEAAAABAAcAAAANAAAAAAACAAUAAAANAAEAAAACAAcAAAAMAAIAAAACAAAAAAANAAIAAAABAAAAAAAMAAwAAAACAAMAAAAMAA0AAAABAAQAAAANAAwAAAABAAMAAAANAA0AAAACAAQAAAAMAA4AAAABAAUAAAANAA4AAAACAAUAAAAOAAAAAAABAAUAAAAOAAEAAAABAAcAAAAPAAAAAAACAAUAAAAPAAEAAAACAAcAAAAOAAIAAAACAAAAAAAPAAIAAAABAAAAAAAOAAwAAAACAAMAAAAOAA0AAAABAAQAAAAPAAwAAAABAAMAAAAPAA0AAAACAAQAAAAOAA4AAAABAAUAAAAPAA4AAAACAAUAAAAQAAAAAAABAAUAAAAQAAEAAAABAAcAAAARAAAAAAACAAUAAAARAAEAAAACAAcAAAAQAAIAAAACAAAAAAARAAIAAAABAAAAAAAQAAwAAAACAAMAAAAQAA0AAAABAAQAAAARAAwAAAABAAMAAAARAA0AAAACAAQAAAAQAA4AAAABAAUAAAARAA4AAAACAAUAAAASAAAAAAACAAUAAAASAAEAAAACAAcAAAASAAIAAAACAAAAAAASAAwAAAABAAMAAAASAA0AAAACAAQAAAASAA4AAAACAAUAAAACAAQAAAAAAAIAAAATAAAAAAABAAUAAAATAAEAAAABAAcAAAATAAIAAAADAAAAAAATAAMAAAADAAEAAAATAAQAAAADAAIAAAATAAUAAAADAAIAAAATAAYAAAADAAEAAAATAAcAAAADAAIAAAATAAgAAAADAAEAAAATAAkAAAADAAIAAAATAAoAAAADAAEAAAATAAsAAAADAAIAAAATAAwAAAADAAMAAAATAA0AAAABAAQAAAATAA4AAAABAAUAAAAUAAAAAAACAAUAAAAUAAEAAAAFAAMAAAAUAAIAAAAAAAYAAAAUAAMAAAAAAAUAAAAUAAQAAAAAAAYAAAAUAAUAAAAAAAUAAAAUAAYAAAAAAAYAAAAUAAcAAAAAAAUAAAAUAAgAAAAAAAYAAAAUAAkAAAAAAAUAAAAUAAoAAAAAAAYAAAAUAAsAAAAAAAUAAAAUAAwAAAAAAAYAAAAUAA0AAAAFAAQAAAAUAA4AAAACAAUAAAAVAAAAAAABAAUAAAAVAAEAAAABAAYAAAAVAAIAAAABAAUAAAAVAAMAAAABAAYAAAAVAAQAAAABAAUAAAAVAAUAAAABAAYAAAAVAAYAAAABAAUAAAAVAAcAAAABAAYAAAAVAAgAAAABAAUAAAAVAAkAAAABAAYAAAAVAAoAAAABAAUAAAAVAAsAAAABAAYAAAAVAAwAAAABAAUAAAAVAA0AAAABAAYAAAAVAA4AAAABAAUAAAAWAAEAAAABAAUAAAAWAAIAAAABAAYAAAAWAAMAAAABAAUAAAAWAAQAAAABAAYAAAAWAAUAAAABAAUAAAAWAAYAAAABAAYAAAAWAAcAAAABAAUAAAAWAAgAAAABAAYAAAAWAAkAAAABAAUAAAAWAAoAAAABAAYAAAAWAAsAAAABAAUAAAAWAAwAAAABAAYAAAAWAA0AAAABAAUAAAAWAA4AAAABAAYAAAAWAAAAAAABAAYAAAADAAMAAAABAAIAAAAEAAMAAAACAAIAAAADAAQAAAABAAEAAAADAAUAAAABAAIAAAAEAAQAAAACAAEAAAAEAAUAAAACAAIAAAADAAYAAAABAAEAAAADAAcAAAABAAIAAAAEAAYAAAACAAEAAAAEAAcAAAAEAAAAAAADAAgAAAABAAEAAAADAAkAAAABAAIAAAAEAAgAAAAEAAEAAAAEAAkAAAACAAIAAAADAAoAAAABAAEAAAADAAsAAAABAAIAAAAEAAoAAAACAAEAAAAEAAsAAAACAAIAAAAFAAMAAAABAAIAAAAGAAMAAAACAAIAAAAFAAQAAAABAAEAAAAFAAUAAAABAAIAAAAGAAQAAAACAAEAAAAGAAUAAAACAAIAAAAFAAYAAAABAAEAAAAFAAcAAAAFAAAAAAAGAAYAAAACAAEAAAAGAAcAAAACAAIAAAAFAAgAAAAFAAEAAAAFAAkAAAABAAIAAAAGAAgAAAACAAEAAAAGAAkAAAACAAIAAAAFAAoAAAABAAEAAAAFAAsAAAABAAIAAAAGAAoAAAACAAEAAAAGAAsAAAACAAIAAAAHAAMAAAABAAIAAAAIAAMAAAACAAIAAAAHAAQAAAABAAEAAAAHAAUAAAABAAIAAAAIAAQAAAACAAEAAAAIAAUAAAACAAIAAAAHAAYAAAABAAEAAAAHAAcAAAABAAIAAAAIAAYAAAACAAEAAAAIAAcAAAACAAIAAAAHAAgAAAABAAEAAAAHAAkAAAABAAIAAAAIAAgAAAACAAEAAAAIAAkAAAACAAIAAAAHAAoAAAABAAEAAAAHAAsAAAABAAIAAAAIAAoAAAACAAEAAAAIAAsAAAACAAIAAAAJAAMAAAABAAIAAAAKAAMAAAACAAIAAAAJAAQAAAABAAEAAAAJAAUAAAABAAIAAAAKAAQAAAACAAEAAAAKAAUAAAACAAIAAAAJAAYAAAABAAEAAAAJAAcAAAABAAIAAAAKAAYAAAACAAEAAAAKAAcAAAACAAIAAAAJAAgAAAABAAEAAAAJAAkAAAABAAIAAAAKAAgAAAACAAEAAAAKAAkAAAACAAIAAAAJAAoAAAABAAEAAAAJAAsAAAABAAIAAAAKAAoAAAACAAEAAAAKAAsAAAACAAIAAAALAAMAAAABAAIAAAAMAAMAAAACAAIAAAALAAQAAAABAAEAAAALAAUAAAABAAIAAAAMAAQAAAACAAEAAAAMAAUAAAACAAIAAAALAAYAAAABAAEAAAALAAcAAAABAAIAAAAMAAYAAAACAAEAAAAMAAcAAAACAAIAAAALAAgAAAABAAEAAAALAAkAAAABAAIAAAAMAAgAAAACAAEAAAAMAAkAAAACAAIAAAALAAoAAAABAAEAAAALAAsAAAABAAIAAAAMAAoAAAACAAEAAAAMAAsAAAACAAIAAAANAAMAAAABAAIAAAAOAAMAAAACAAIAAAANAAQAAAABAAEAAAANAAUAAAABAAIAAAAOAAQAAAACAAEAAAAOAAUAAAACAAIAAAANAAYAAAABAAEAAAANAAcAAAABAAIAAAAOAAYAAAACAAEAAAAOAAcAAAACAAIAAAANAAgAAAABAAEAAAANAAkAAAABAAIAAAAOAAgAAAACAAEAAAAOAAkAAAAEAAAAAAANAAoAAAABAAEAAAANAAsAAAABAAIAAAAOAAoAAAAEAAEAAAAOAAsAAAACAAIAAAAPAAMAAAABAAIAAAAQAAMAAAACAAIAAAAPAAQAAAABAAEAAAAPAAUAAAABAAIAAAAQAAQAAAACAAEAAAAQAAUAAAACAAIAAAAPAAYAAAABAAEAAAAPAAcAAAABAAIAAAAQAAYAAAACAAEAAAAQAAcAAAACAAIAAAAPAAgAAAAEAAAAAAAPAAkAAAAFAAIAAAAQAAgAAAAFAAAAAAAQAAkAAAAFAAEAAAAPAAoAAAAFAAEAAAAPAAsAAAABAAIAAAAQAAoAAAACAAEAAAAQAAsAAAACAAIAAAARAAMAAAAEAAAAAAASAAMAAAAFAAAAAAARAAQAAAAEAAEAAAARAAUAAAABAAIAAAASAAQAAAAFAAEAAAASAAUAAAACAAIAAAARAAYAAAABAAEAAAARAAcAAAABAAIAAAASAAYAAAACAAEAAAASAAcAAAACAAIAAAARAAgAAAABAAEAAAARAAkAAAABAAIAAAASAAgAAAACAAEAAAASAAkAAAACAAIAAAARAAoAAAABAAEAAAARAAsAAAABAAIAAAASAAoAAAACAAEAAAASAAsAAAACAAIAAAA=")
tile_set = ExtResource("1_vdndo")

[node name="Flowers" type="TileMapLayer" parent="Game/Background"]
tile_set = ExtResource("1_vdndo")

[node name="Foreground" type="Node2D" parent="Game"]

[node name="RespawnPoint" type="Marker2D" parent="Game/Foreground"]
position = Vector2(550, 591)

[node name="DebugGrid" type="TileMapLayer" parent="Game/Foreground"]
texture_filter = 5
tile_map_data = PackedByteArray("AAACAAIAAQAAAAAAAAACAAMAAQAAAAAAAAACAAQAAQAAAAAAAAACAAUAAQAAAAAAAAACAAYAAQAAAAAAAAACAAcAAQAAAAAAAAACAAgAAQAAAAAAAAACAAkAAQAAAAAAAAACAAoAAQAAAAAAAAACAAsAAQAAAAAAAAACAAwAAQAAAAAAAAADAAIAAQAAAAAAAAADAAMAAQAAAAAAAAADAAQAAQAAAAAAAAADAAUAAQAAAAAAAAADAAYAAQAAAAAAAAADAAcAAQAAAAAAAAADAAgAAQAAAAAAAAADAAkAAQAAAAAAAAADAAoAAQAAAAAAAAADAAsAAQAAAAAAAAADAAwAAQAAAAAAAAAEAAIAAQAAAAAAAAAEAAMAAQAAAAAAAAAEAAQAAQAAAAAAAAAEAAUAAQAAAAAAAAAEAAYAAQAAAAAAAAAEAAcAAQAAAAAAAAAEAAgAAQAAAAAAAAAEAAkAAQAAAAAAAAAEAAoAAQAAAAAAAAAEAAsAAQAAAAAAAAAEAAwAAQAAAAAAAAAFAAIAAQAAAAAAAAAFAAMAAQAAAAAAAAAFAAQAAQAAAAAAAAAFAAUAAQAAAAAAAAAFAAYAAQAAAAAAAAAFAAcAAQAAAAAAAAAFAAgAAQAAAAAAAAAFAAkAAQAAAAAAAAAFAAoAAQAAAAAAAAAFAAsAAQAAAAAAAAAFAAwAAQAAAAAAAAAGAAIAAQAAAAAAAAAGAAMAAQAAAAAAAAAGAAQAAQAAAAAAAAAGAAUAAQAAAAAAAAAGAAYAAQAAAAAAAAAGAAcAAQAAAAAAAAAGAAgAAQAAAAAAAAAGAAkAAQAAAAAAAAAGAAoAAQAAAAAAAAAGAAsAAQAAAAAAAAAGAAwAAQAAAAAAAAAHAAIAAQAAAAAAAAAHAAMAAQAAAAAAAAAHAAQAAQAAAAAAAAAHAAUAAQAAAAAAAAAHAAYAAQAAAAAAAAAHAAcAAQAAAAAAAAAHAAgAAQAAAAAAAAAHAAkAAQAAAAAAAAAHAAoAAQAAAAAAAAAHAAsAAQAAAAAAAAAHAAwAAQAAAAAAAAAIAAIAAQAAAAAAAAAIAAMAAQAAAAAAAAAIAAQAAQAAAAAAAAAIAAUAAQAAAAAAAAAIAAYAAQAAAAAAAAAIAAcAAQAAAAAAAAAIAAgAAQAAAAAAAAAIAAkAAQAAAAAAAAAIAAoAAQAAAAAAAAAIAAsAAQAAAAAAAAAIAAwAAQAAAAAAAAAJAAIAAQAAAAAAAAAJAAMAAQAAAAAAAAAJAAQAAQAAAAAAAAAJAAUAAQAAAAAAAAAJAAYAAQAAAAAAAAAJAAcAAQAAAAAAAAAJAAgAAQAAAAAAAAAJAAkAAQAAAAAAAAAJAAoAAQAAAAAAAAAJAAsAAQAAAAAAAAAJAAwAAQAAAAAAAAAKAAIAAQAAAAAAAAAKAAMAAQAAAAAAAAAKAAQAAQAAAAAAAAAKAAUAAQAAAAAAAAAKAAYAAQAAAAAAAAAKAAcAAQAAAAAAAAAKAAgAAQAAAAAAAAAKAAkAAQAAAAAAAAAKAAoAAQAAAAAAAAAKAAsAAQAAAAAAAAAKAAwAAQAAAAAAAAALAAIAAQAAAAAAAAALAAMAAQAAAAAAAAALAAQAAQAAAAAAAAALAAUAAQAAAAAAAAALAAYAAQAAAAAAAAALAAcAAQAAAAAAAAALAAgAAQAAAAAAAAALAAkAAQAAAAAAAAALAAoAAQAAAAAAAAALAAsAAQAAAAAAAAALAAwAAQAAAAAAAAAMAAIAAQAAAAAAAAAMAAMAAQAAAAAAAAAMAAQAAQAAAAAAAAAMAAUAAQAAAAAAAAAMAAYAAQAAAAAAAAAMAAcAAQAAAAAAAAAMAAgAAQAAAAAAAAAMAAkAAQAAAAAAAAAMAAoAAQAAAAAAAAAMAAsAAQAAAAAAAAAMAAwAAQAAAAAAAAANAAIAAQAAAAAAAAANAAMAAQAAAAAAAAANAAQAAQAAAAAAAAANAAUAAQAAAAAAAAANAAYAAQAAAAAAAAANAAcAAQAAAAAAAAANAAgAAQAAAAAAAAANAAkAAQAAAAAAAAANAAoAAQAAAAAAAAANAAsAAQAAAAAAAAANAAwAAQAAAAAAAAAOAAIAAQAAAAAAAAAOAAMAAQAAAAAAAAAOAAQAAQAAAAAAAAAOAAUAAQAAAAAAAAAOAAYAAQAAAAAAAAAOAAcAAQAAAAAAAAAOAAgAAQAAAAAAAAAOAAkAAQAAAAAAAAAOAAoAAQAAAAAAAAAOAAsAAQAAAAAAAAAOAAwAAQAAAAAAAAAPAAIAAQAAAAAAAAAPAAMAAQAAAAAAAAAPAAQAAQAAAAAAAAAPAAUAAQAAAAAAAAAPAAYAAQAAAAAAAAAPAAcAAQAAAAAAAAAPAAgAAQAAAAAAAAAPAAkAAQAAAAAAAAAPAAoAAQAAAAAAAAAPAAsAAQAAAAAAAAAPAAwAAQAAAAAAAAAQAAIAAQAAAAAAAAAQAAMAAQAAAAAAAAAQAAQAAQAAAAAAAAAQAAUAAQAAAAAAAAAQAAYAAQAAAAAAAAAQAAcAAQAAAAAAAAAQAAgAAQAAAAAAAAAQAAkAAQAAAAAAAAAQAAoAAQAAAAAAAAAQAAsAAQAAAAAAAAAQAAwAAQAAAAAAAAARAAIAAQAAAAAAAAARAAMAAQAAAAAAAAARAAQAAQAAAAAAAAARAAUAAQAAAAAAAAARAAYAAQAAAAAAAAARAAcAAQAAAAAAAAARAAgAAQAAAAAAAAARAAkAAQAAAAAAAAARAAoAAQAAAAAAAAARAAsAAQAAAAAAAAARAAwAAQAAAAAAAAASAAIAAQAAAAAAAAASAAMAAQAAAAAAAAASAAQAAQAAAAAAAAASAAUAAQAAAAAAAAASAAYAAQAAAAAAAAASAAcAAQAAAAAAAAASAAgAAQAAAAAAAAASAAkAAQAAAAAAAAASAAoAAQAAAAAAAAASAAsAAQAAAAAAAAASAAwAAQAAAAAAAAATAAIAAQAAAAAAAAATAAMAAQAAAAAAAAATAAQAAQAAAAAAAAATAAUAAQAAAAAAAAATAAYAAQAAAAAAAAATAAcAAQAAAAAAAAATAAgAAQAAAAAAAAATAAkAAQAAAAAAAAATAAoAAQAAAAAAAAATAAsAAQAAAAAAAAATAAwAAQAAAAAAAAA=")
tile_set = ExtResource("3_qh4lb")
collision_enabled = false

[node name="Food" type="TileMapLayer" parent="Game/Foreground"]
texture_filter = 5
position = Vector2(-1, 0)
scale = Vector2(3, 3)
tile_map_data = PackedByteArray("AAAJAAgAAAAKAAMAAAA=")
tile_set = ExtResource("2_ioxok")

[node name="Snake" type="Node2D" parent="Game/Foreground"]

[node name="Wizard" parent="Game/Foreground/Snake" instance=ExtResource("4_m1wmf")]

[node name="Skull" parent="Game/Foreground/Snake" instance=ExtResource("5_3nbu2")]
position = Vector2(552, 506)

[node name="DebugHighlights" type="TileMapLayer" parent="Game/Foreground"]
texture_filter = 5
tile_set = ExtResource("3_qh4lb")
collision_enabled = false

[node name="Walls" type="Node2D" parent="Game"]

[node name="HUD" type="CanvasLayer" parent="."]

[node name="PauseModal" parent="." instance=ExtResource("6_04wxa")]
visible = false
